# CGF

./: README.md  bibtex.md  index.md
src/: CMakeLists.txt  compress.py  embedding.py  main.cpp
